gcc/testsuite/gdc.test/compilable/test15668.d
void foo ( int line = __LINE__ ) ( string msg = "" )
{
    static assert (line == 8);
}

void main()
{
    foo();
}
