gcc/testsuite/gdc.test/fail_compilation/ice8604.d
struct StructFoo
{
    static if(i) { }
    else enum z = "";
}

void main() { }
